try to repair menu bug on iphone landscape mode

--- a/css/main.css
+++ b/css/main.css
@@ -30,12 +30,6 @@ html[xmlns] .clearfix {
   -moz-box-sizing: border-box; 
   box-sizing: border-box;
 }
-html {
-	position:fixed;
-	width:100%;
-	height:100%;
-	overflow:hidden;
-}
 body{
 	margin: 0;
 	position: relative;
